Added some basic stuff and some lists

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -6,6 +6,7 @@
 \input{preamble/etc}
 
 \addbibresource{bibliography/Bibliography.bib}
+\addbibresource{bibliography/Bachelor F18.bib}
 
 \begin{document}
 
@@ -13,11 +14,11 @@
 \include{prefrontmatter/titlepage}
 \clearforchapter
 
-\frontmatter
-\include{frontmatter/Summary}
-\include{frontmatter/Preface}
-\include{frontmatter/Acknowledgements}
-\clearforchapter
+%\frontmatter
+%\include{frontmatter/Summary}
+%\include{frontmatter/Preface}
+%\include{frontmatter/Acknowledgements}
+%\clearforchapter
 \tableofcontents
 \pagebreak
 \listoffigures*
@@ -26,7 +27,9 @@
 \mylistoftodos
 
 \mainmatter
-\include{chapters/Introduction}
+%\include{chapters/Introduction}
+\include{chapters/Objectives}
+\include{chapters/Tasks}
 \blinddocument
 \include{chapters/Conclusion}
 
