first version of finished project plan

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -12,7 +12,7 @@
 
 \prefrontmatter
 \include{prefrontmatter/titlepage}
-\clearforchapter
+%\clearforchapter
 
 %\frontmatter
 %\include{frontmatter/Summary}
@@ -20,25 +20,25 @@
 %\include{frontmatter/Acknowledgements}
 %\clearforchapter
 \tableofcontents
-\pagebreak
-\listoffigures*
-\listoftables*
-\clearforchapter
-\mylistoftodos
+%\pagebreak
+%\listoffigures*
+%\listoftables*
+%\clearforchapter
+%\mylistoftodos
 
-\mainmatter
+%\mainmatter
 %\include{chapters/Introduction}
 \include{chapters/Objectives}
 \include{chapters/Tasks}
-\blinddocument
-\include{chapters/Conclusion}
+%\blinddocument
+%\include{chapters/Conclusion}
 
-\appendixpage
-\appendix
-\include{appendices/AnAppendix}
+%\appendixpage
+%\appendix
+%\include{appendices/AnAppendix}
 
-\backmatter
-\printbibliography
+%\backmatter
+%\printbibliography
 
 \cleartoevenpage %To make it look nice.
 \include{prefrontmatter/colophon}
