--- a/preamble/general.tex
+++ b/preamble/general.tex
@@ -88,6 +88,7 @@
 \usepackage{setspace}				 % Spacing environment
 \usepackage{preamble/dtucolors}	
 \graphicspath{{graphics/}}
+\usepackage{lscape}
 
 % Language
 \usepackage{polyglossia}    % multilingual typesetting and appropriate hyphenation
