--- a/preamble/static.tex
+++ b/preamble/static.tex
@@ -19,8 +19,8 @@
 
 \def\ThYear{2018}
 
-\def\ThTitle{Modded Laursen's XeLaTeX thesis template}
-\def\ThSubtitle{A nice thesis template}
+\def\ThTitle{Project plan}
+\def\ThSubtitle{Continous orientation measurements of mobile antenna}
 
 \def\ThAuthors{Martin Forsingdal (s154170)}
 \def\Owner{Martin Forsingdal} % Used for copyright
