Initial edited template

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -12,33 +12,33 @@
 
 \prefrontmatter
 \include{prefrontmatter/titlepage}
-%\clearforchapter
-
-%\frontmatter
-%\include{frontmatter/Summary}
-%\include{frontmatter/Preface}
-%\include{frontmatter/Acknowledgements}
-%\clearforchapter
+\clearforchapter
+s
+\frontmatter
+\include{frontmatter/Summary}
+\include{frontmatter/Preface}
+\include{frontmatter/Acknowledgements}
+\clearforchapter
 \tableofcontents
-%\pagebreak
-%\listoffigures*
-%\listoftables*
-%\clearforchapter
-%\mylistoftodos
+\pagebreak
+\listoffigures*
+\listoftables*
+\clearforchapter
+\mylistoftodos
 
-%\mainmatter
-%\include{chapters/Introduction}
-\include{chapters/Objectives}
-\include{chapters/Tasks}
-%\blinddocument
-%\include{chapters/Conclusion}
+\mainmatter
+\include{chapters/Introduction}
+\include{chapters/Theory}
+\include{chapters/Method}
+\include{chapters/Results}
+\include{chapters/Conclusion}
 
-%\appendixpage
-%\appendix
-%\include{appendices/AnAppendix}
+\appendixpage
+\appendix
+\include{appendices/AnAppendix}
 
-%\backmatter
-%\printbibliography
+\backmatter
+\printbibliography
 
 \cleartoevenpage %To make it look nice.
 \include{prefrontmatter/colophon}
