--- a/preamble/static.tex
+++ b/preamble/static.tex
@@ -19,8 +19,8 @@
 
 \def\ThYear{2018}
 
-\def\ThTitle{Project plan}
-\def\ThSubtitle{Continous orientation measurements of mobile antenna}
+\def\ThTitle{Continous orientation measurements of mobile antenna}
+\def\ThSubtitle{Bachelor thesis}
 
 \def\ThAuthors{Martin Forsingdal (s154170)}
 \def\Owner{Martin Forsingdal} % Used for copyright
